--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 	<nav class="top-menu">
 		<span class="top-menu-logo" title="Logo COINTIMES"><a href="#"><img src="img/logo.png"></a></span>
 		<span class="top-menu-btn1"> <i class="fas fa-bars"></i> </span>
+		<ul class="top-menu-itens">
+			<li><a href="#">cripto</a></li>
+			<li><a href="#">mercado</a></li>
+			<li><a href="#">finanças</a></li>
+			<li><a href="#">política</a></li>
+			<li><a href="#">relatórios</a></li>
+			<li><a href="#">tudo</a></li>
+
+		</ul>
 	</nav>
 </header>
 <!-- FIM TOPO -->
